welcome.lessons.welcome.instructions.InstructionsDrawG.scala.error
Source:17: error: too many arguments for method droite: ()Unit
droite(2)
      ^