welcome.lessons.welcome.instructions.InstructionsDrawG.scala.code
baisseBrosse()
gauche()
avance(4)
gauche()
avance(4)
gauche()
avance(4)
gauche()
avance(2)
gauche()
avance()

droite()
droite()
avance()
droite(2)
avance()
avance(4)
avance()
avance(4)
avance()
avance(4)
avance()
avance(4)
